package com.cesar.school.fds2.raycharge.motorista.domain.veiculo;

import org.jmolecules.ddd.types.AggregateRoot;

public class Veiculo implements Cloneable, AggregateRoot<Veiculo, IdVeiculo> {
}
